Uploaded image for project: 'IMPALA'
  1. IMPALA
  2. IMPALA-5363

DCHECK hit in BlockingJoinNode: DCHECK_EQ(probe_batch_->num_rows(), 0);

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Resolved
    • Blocker
    • Resolution: Fixed
    • Impala 2.8.0
    • Impala 2.10.0
    • None
    • None

    Description

      I was able to recreate this crash consistently by running this particular query locally -
      select * FROM tpch_nested_parquet.customer c, (SELECT ca.o_orderkey okey, ca.o_orderpriority opriority FROM c.c_orders ca, c.c_orders cb WHERE ca.o_orderkey = cb.o_orderkey limit 2) v limit 51;

      Here is the backtrace -
      (gdb) bt
      #0 0x00007fb1461cdc37 in __GI_raise (sig=sig@entry=6) at ../nptl/sysdeps/unix/sysv/linux/raise.c:56
      #1 0x00007fb1461d1028 in __GI_abort () at abort.c:89
      #2 0x000000000291f764 in google::DumpStackTraceAndExit() ()
      #3 0x00000000029161dd in google::LogMessage::Fail() ()
      #4 0x0000000002917a82 in google::LogMessage::SendToLog() ()
      #5 0x0000000002915bb7 in google::LogMessage::Flush() ()
      #6 0x000000000291917e in google::LogMessageFatal::~LogMessageFatal() ()
      #7 0x00000000018d56c8 in impala::BlockingJoinNode::GetFirstProbeRow (this=0x863c380, state=0x8875000) at /home/anuj/Impala/be/src/exec/blocking-join-node.cc:236
      #8 0x0000000001869273 in impala::PartitionedHashJoinNode::Open (this=0x863c380, state=0x8875000) at /home/anuj/Impala/be/src/exec/partitioned-hash-join-node.cc:188
      #9 0x00000000017f5df2 in impala::NestedLoopJoinNode::Open (this=0x72b1800, state=0x8875000) at /home/anuj/Impala/be/src/exec/nested-loop-join-node.cc:78
      #10 0x00000000018a830a in impala::SubplanNode::GetNext (this=0x8aac300, state=0x8875000, row_batch=0xa62f0e0, eos=0x7fb0ba2c46ef)
      at /home/anuj/Impala/be/src/exec/subplan-node.cc:128
      #11 0x00000000014930c6 in impala::FragmentInstanceState::ExecInternal (this=0xa2cb480) at /home/anuj/Impala/be/src/runtime/fragment-instance-state.cc:270
      #12 0x0000000001490a31 in impala::FragmentInstanceState::Exec (this=0xa2cb480) at /home/anuj/Impala/be/src/runtime/fragment-instance-state.cc:88
      #13 0x00000000014568d2 in impala::QueryState::ExecFInstance (this=0x8870000, fis=0xa2cb480) at /home/anuj/Impala/be/src/runtime/query-state.cc:337
      #14 0x0000000001463310 in boost::_mfi::mf1<void, impala::QueryState, impala::FragmentInstanceState*>::operator() (this=0x849bd80, p=0x8870000, a1=0xa2cb480)
      at /home/anuj/Impala/toolchain/boost-1.57.0-p1/include/boost/bind/mem_fn_template.hpp:165
      #15 0x0000000001462d4b in boost::_bi::list2<boost::_bi::value<impala::QueryState*>, boost::_bi::value<impala::FragmentInstanceState*> >::operator()<boost::_mfi::mf1<void, impala::QueryState, impala::FragmentInstanceState*>, boost::_bi::list0> (this=0x849bd90, f=..., a=...)
      at /home/anuj/Impala/toolchain/boost-1.57.0-p1/include/boost/bind/bind.hpp:313
      #16 0x000000000146263d in boost::_bi::bind_t<void, boost::_mfi::mf1<void, impala::QueryState, impala::FragmentInstanceState*>, boost::_bi::list2<boost::_bi::value<impala::QueryState*>, boost::_bi::value<impala::FragmentInstanceState*> > >::operator() (this=0x849bd80)
      at /home/anuj/Impala/toolchain/boost-1.57.0-p1/include/boost/bind/bind_template.hpp:20
      #17 0x0000000001461b24 in boost::detail::function::void_function_obj_invoker0<boost::_bi::bind_t<void, boost::_mfi::mf1<void, impala::QueryState, impala::FragmentInstanceState*>, boost::_bi::list2<boost::_bi::value<impala::QueryState*>, boost::_bi::value<impala::FragmentInstanceState*> > >, void>::invoke (function_obj_ptr=...)
      at /home/anuj/Impala/toolchain/boost-1.57.0-p1/include/boost/function/function_template.hpp:153
      #18 0x00000000013b952c in boost::function0<void>::operator() (this=0x7fb0ba2c4d20)
      at /home/anuj/Impala/toolchain/boost-1.57.0-p1/include/boost/function/function_template.hpp:767
      #19 0x00000000016844e5 in impala::Thread::SuperviseThread(std::string const&, std::string const&, boost::function<void ()>, impala::Promise<long>*) (
      name="exec-query-finstance-a9401344c1795827:c2daf45200000001", category="query-state", functor=..., thread_started=0x7fb0bb2c5c10)
      at /home/anuj/Impala/be/src/util/thread.cc:325
      #20 0x000000000168ce68 in boost::_bi::list4<boost::_bi::value<std::string>, boost::_bi::value<std::string>, boost::_bi::value<boost::function<void ()> >, boost::_bi::value<impala::Promise<long>> >::operator()<void (std::string const&, std::string const&, boost::function<void ()>, impala::Promise<long>), boost::_bi::list0>(boost::_bi::type<void>, void (&)(std::string const&, std::string const&, boost::function<void ()>, impala::Promise<long>), boost::_bi::list0&, int) (this=0x72b13c0,
      f=@0x72b13b8: 0x1684220 <impala::Thread::SuperviseThread(std::string const&, std::string const&, boost::function<void ()>, impala::Promise<long>*)>, a=...)
      at /home/anuj/Impala/toolchain/boost-1.57.0-p1/include/boost/bind/bind.hpp:457
      #21 0x000000000168cdab in boost::_bi::bind_t<void, void (std::string const&, std::string const&, boost::function<void ()>, impala::Promise<long>), boost::_bi::list4<boost::_bi::value<std::string>, boost::_bi::value<std::string>, boost::_bi::value<boost::function<void ()> >, boost::_bi::value<impala::Promise<long>> > >::operator()() (this=0x72b13b8) at /home/anuj/Impala/toolchain/boost-1.57.0-p1/include/boost/bind/bind_template.hpp:20
      #22 0x000000000168cd6e in boost::detail::thread_data<boost::_bi::bind_t<void, void (std::string const&, std::string const&, boost::function<void ()>, impala::Promise<long>), boost::_bi::list4<boost::_bi::value<std::string>, boost::_bi::value<std::string>, boost::_bi::value<boost::function<void ()> >, boost::_bi::value<impala::Promise<long>> > > >::run() (this=0x72b1200) at /home/anuj/Impala/toolchain/boost-1.57.0-p1/include/boost/thread/detail/thread.hpp:116
      #23 0x0000000001b46b4a in thread_proxy ()
      #24 0x00007fb146564184 in start_thread (arg=0x7fb0ba2c5700) at pthread_create.c:312

      Attachments

        Activity

          People

            anujphadke Anuj Phadke
            anujphadke Anuj Phadke
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: